# northflow-crypto-trading-bot

./: .gitignore  .replit  AGENTS.md  Cargo.toml  README.md  pnpm-lock.yaml  replit.md  replit.nix
legacy_reference/crypto-scalper/: Cargo.toml  Dockerfile  replit.nix
legacy_reference/crypto-scalper/config/: conservative.toml
legacy_reference/crypto-scalper/dashboard/: next.config.mjs  package.json
legacy_reference/crypto-scalper/dashboard/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
legacy_reference/crypto-scalper/dashboard/.next/cache/: .tsbuildinfo
legacy_reference/crypto-scalper/dashboard/.next/server/: app-paths-manifest.json  functions-config-manifest.json  middleware-build-manifest.js  server-reference-manifest.json
legacy_reference/crypto-scalper/dashboard/.next/server/app/: _not-found.html  _not-found.rsc  config.html  config.rsc  control.html  control.rsc  index.html  index.rsc  lessons.html  lessons.rsc  overview.html  overview.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js  positions.html  positions.rsc  screening.html  screening.rsc  signals.html  signals.rsc  strategies.html  strategies.rsc  survival.html  survival.rsc  trades.html  trades.rsc
legacy_reference/crypto-scalper/dashboard/.next/server/chunks/: 0.js  17.js  30.js  592.js
legacy_reference/crypto-scalper/dashboard/.next/server/pages/: 500.html  _app.js  _app.js.nft.json  _document.js  _document.js.nft.json  _error.js
legacy_reference/crypto-scalper/dashboard/.next/static/chunks/: 199-a332913c3c835ab3.js  205-aaa6a835b539c8f6.js  280-f1fe634b7a8a60d3.js  552-f54e5dc39f1c2eca.js  62-e5bf7a26dfc4b960.js  645-7fbf60b8f8d9f365.js  678-eac8244bddf15c27.js  e00c9843-32fc02d752161144.js  main-app-d0c3e427e9e2bcb4.js  main-f1e92c63e81a288a.js  webpack-86d0af20bd342382.js
legacy_reference/crypto-scalper/dashboard/.next/static/css/: e5df00f740e784a2.css
legacy_reference/crypto-scalper/dashboard/.next/static/hxit1vJVjBsvOjbMKE3LT/: _buildManifest.js
legacy_reference/crypto-scalper/dashboard/.next/types/app/: layout.ts  page.ts
legacy_reference/crypto-scalper/dashboard/src/hooks/: useSse.ts
legacy_reference/crypto-scalper/dashboard/src/lib/: api.ts
legacy_reference/crypto-scalper/data/: equity.json
legacy_reference/crypto-scalper/docs/: AUDIT.md  CODEBASE_REVIEW_2026-05-27.md  CONFIG.md
legacy_reference/crypto-scalper/src/: lib.rs  main.rs  quant.rs  shared_state.rs
legacy_reference/crypto-scalper/src/agents/: brain.rs  control.rs  data.rs  execution.rs  feeds.rs  messages.rs  orchestrator.rs  risk.rs  survival.rs  watchdog.rs
legacy_reference/crypto-scalper/src/backtest/: engine.rs  mod.rs
legacy_reference/crypto-scalper/src/data/: mod.rs  ohlcv_builder.rs  order_book.rs  ws_client.rs
legacy_reference/crypto-scalper/src/execution/: binance.rs  exchange.rs  mod.rs  paper.rs  risk.rs
legacy_reference/crypto-scalper/src/learning/: memory.rs  policy.rs
legacy_reference/crypto-scalper/src/llm/: context_builder.rs  engine.rs  response_parser.rs
legacy_reference/crypto-scalper/src/monitoring/: api.rs  logger.rs  metrics.rs  mod.rs  telegram.rs
legacy_reference/crypto-scalper/src/portfolio/: mod.rs
legacy_reference/crypto-scalper/src/research/: export.rs
legacy_reference/crypto-scalper/src/strategy/: alpha_gate.rs  ema_ribbon.rs  kalman_trend.rs  mean_reversion.rs  mod.rs  momentum.rs  order_flow.rs  regime.rs  screening.rs  state.rs
northflow/: .gitignore  Cargo.toml  README.md
northflow/config/: research.toml
northflow/legacy/aria/: README.md
northflow/northflow-cli/: Cargo.toml
northflow/northflow-cli/src/: main.rs
northflow/northflow_crypto_trading_bot/: Cargo.toml
northflow/northflow_crypto_trading_bot/src/: lib.rs
northflow/northflow_crypto_trading_bot/src/advisor/: mod.rs
northflow/northflow_crypto_trading_bot/src/config/: mod.rs
northflow/northflow_crypto_trading_bot/src/core/: mod.rs
northflow/northflow_crypto_trading_bot/src/data/: mod.rs
northflow/northflow_crypto_trading_bot/src/indicators/: mod.rs
northflow/northflow_crypto_trading_bot/src/journal/: mod.rs
northflow/northflow_crypto_trading_bot/src/report/: mod.rs
northflow/northflow_crypto_trading_bot/src/research/: mod.rs
northflow/northflow_crypto_trading_bot/src/risk/: mod.rs
northflow/northflow_crypto_trading_bot/src/sim/: mod.rs
northflow/northflow_crypto_trading_bot/src/strategy/: mod.rs
(+299 files in other folders)
