[package]
name = "crypto-scalper"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "ARIA — LLM-Powered Autonomous Crypto Scalper Bot"
license = "MIT"
repository = "https://github.com/whaledecoder/crypto-scalper"
readme = "README.md"

[[bin]]
name = "aria"
path = "src/main.rs"

[lib]
name = "crypto_scalper"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["native-tls", "connect"] }

# HTTP & networking
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "gzip", "multipart"] }
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"
url = "2.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
postgres-native-tls = "0.5"
native-tls = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto signing (HMAC-SHA256)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
openssl = "0.10"

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
dashmap = "6"
rand = "0.9"
regex = "1"
rustc-hash = "1.1"

# HTTP server for metrics/dashboard
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# RSS / Atom feed parsing
feed-rs = "2.0"

# Chart generation — plotters with bitmap backend, PNG encoder, candlestick element, TTF fonts
plotters = { version = "0.3", default-features = false, features = [
    "bitmap_backend", "bitmap_encoder", "image", "chrono",
    "ttf", "candlestick", "line_series",
] }

[dev-dependencies]
approx = "0.5"
tempfile = "3"

[profile.release]
opt-level     = 3
lto           = "thin"   # thin LTO: faster build than "fat", still good optimization
codegen-units = 4        # fewer units = better optimization
panic         = "abort"
strip         = "symbols"

[profile.dev]
opt-level = 1            # faster test compilation than 0
debug     = true
