[package]
name = "northflow_crypto_trading_bot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Research-first deterministic crypto trading bot core library"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
csv = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
